# mtg-combo-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  chat-ui-env.local  compose.yaml  dockerfile  llama-3.3-70B-Instruct-unsloth.yaml  llama_3_1_nemotron_70B_instruct_fsdp_qlora.yaml  llama_3_1_nemotron_70B_instruct_unsloth.yaml  llama_3_2_3B_instruct_unsloth.yaml  mtg_ai.ipynb  mtg_combo_getter.ipynb  mtg_process.ipynb  mtg_processing.ipynb  nginx.conf  process_mtg_data.py  pyproject.toml  train.py
.github/: copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: labeler.yml  run-tests.yml  stale.yml
mtg_ai/: __init__.py  constants.py
mtg_ai/ai/: __init__.py  card_ai.py  card_training.py  huggingface_instruction_training.py
mtg_ai/cards/: __init__.py  combos.py  database.py  training_data_builder.py  utils.py
mtg_ai/cards/sql/: filtered_cards.sql
mtg_ai/data/: __init__.py  cards.py  tokenize_cards.py
src/mtg_ai/: __init__.py  cli.py  constants.py  utils.py
src/mtg_ai/ai/: __init__.py  ai_model.py  ai_training.py  rag.py  runner.py  utils.py
src/mtg_ai/ai/training/: __init__.py  auto_trainer.py  base_trainer.py  config.py  dataset_loader.py  fsdp_trainer.py  unsloth_trainer.py
src/mtg_ai/cards/: __init__.py  combos.py  database.py  dataset_loader.py  edh_combos.py  training_data_builder.py  utils.py
src/mtg_ai_rag_webserver/: __init__.py  config.toml  main.py  models.py  run.py  server_settings.py
src/mtg_ai_webserver/: __init__.py  config.toml  main.py  models.py  run.py  server_settings.py
tests/mtg_ai/cards/: test_database.py
training_configs/: llama-3.1-8B-Instruct-unsloth.yaml  llama-3.3-70B-Instruct-fsdp-qlora.yaml
